fix modal scrollbars; game data lists are sorted by full data lists

--- a/src/Components.css
+++ b/src/Components.css
@@ -53,7 +53,6 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    overflow: scroll;
     scrollbar-width: thin;
     overflow-x: hidden;
     overflow-y: auto;
